apps/fider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fider
  namespace: apps
spec:
  selector:
    app: fider
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
